--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -509,10 +509,10 @@ npc:
     
     special-abilities: 
       - Legendary Resistance: (3/Day), If Anastasia Dumas fails a saving throw she can choose to succeed instead 
-      - Legendary Actions: Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn
+        Legendary Actions: Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn
         - Devils Portal: Anastasia can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
-        - Cantrip: Anastasia Dumas casts a cantrip
-        - Family Reserve: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
+          Cantrip: Anastasia Dumas casts a cantrip
+          Family Reserve: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
     
     attacks: |
       Spellcasting
