--- a/npcs/Anastasia_Dumas.yaml
+++ b/npcs/Anastasia_Dumas.yaml
@@ -465,7 +465,7 @@ npc:
   specialties:
     - skills:
       - Sorcerer Abilities:
-        - Sorcerer Spellcasting (Sorcery Points 20, Spell DC 20):
+        - Sorcerer Spellcasting (i)Sorcery Points 20, Spell DC 20)(/i):
           - Cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
             1st Level: Charm Person, Magic Missle, Shield, Mage Armor
             2nd Level: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
@@ -508,11 +508,11 @@ npc:
         Shadow Sorcerer Quirks: When you are asleep, you don't appear to breathe (though you must still breathe to survive)
     
       special-abilities: 
-        - Legendary Resistance: (3/Day), If Anastasia Dumas fails a saving throw she can choose to succeed instead 
-          Legendary Actions: Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn
-          - Devils Portal: Anastasia can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
-            Cantrip: Anastasia Dumas casts a cantrip
-            Family Reserve: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
+      - Legendary Resistance: (3/Day), If Anastasia Dumas fails a saving throw she can choose to succeed instead 
+        Legendary Actions: Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn
+        - Devils Portal: Anastasia can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
+          Cantrip: Anastasia Dumas casts a cantrip
+          Family Reserve: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
     
     attacks: |
       Spellcasting
