--- a/npcs/steve_patch_yarrow.yaml
+++ b/npcs/steve_patch_yarrow.yaml
@@ -463,11 +463,11 @@ npc:
   specialties:
     skills: 
         
-   - - Rogue Abilities:
-       - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-       - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-       - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-       - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
+    - Rogue Abilities:
+      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+      - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+      - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
+      - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
        
    - - Thief Abilities:
        - Fast Hands: you can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action.
