--- a/npcs/Anastasia_Dumas.yaml
+++ b/npcs/Anastasia_Dumas.yaml
@@ -589,10 +589,10 @@ npc:
   #
   uncategorized:
   - uncategorized_template_1: TEMPLATE
-    uncategorized_template_2: |
-      TEMPLATE
-      MORE TEMPLATE
-    uncategorized_template_3: TEMPLATE
+  - uncategorized_template_2: |
+    TEMPLATE
+    MORE TEMPLATE
+  - uncategorized_template_3: TEMPLATE
 ---
 
 #
