--- a/npcs/beach.yaml
+++ b/npcs/beach.yaml
@@ -71,7 +71,7 @@
 # Preliminary fields that describe this overall file:
 #
 kind: vibrantgames.ca/npc
-version: 0.0.4
+version: 0.0.2
 
 #
 # Information about who submitted the data, when, how, etc.:
@@ -103,7 +103,7 @@ metadata:
   # E.g. "2021-12-31"
   #      "2021-12-31 23:59:59"
   #
-  date: "2021-05-15"
+  date: "2021-08-15"
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -466,23 +466,31 @@ npc:
   specialties:
     skills:
     - Desert Orc Abilities:
-      - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+      - Darkvision: 
+        Description: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray
         Aggressive: As a bonus action, you can move up to your speed toward an enemy of your choice that you can see or hear. You must end this move closer to the enemy than you started
         Primal Intuition: Proficient in Insight and Survival
         Powerful Build: count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift
-        Heat Resistance: Gains Advantage on saving throws caused by extremely hot weather or dehydration           
-    
+        Heat Resistance: Gains Advantage on saving throws caused by extremely hot weather or dehydration
+        
       Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+      - Expertise: 
+        Description: Double proficiency bonus with Thieve's Tools and Sleight of Hand
         Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
         Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage       
+        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
 
       Assassin Abilities:
-      - Assassinate: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit
+      - Assassinate: 
+        Description: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit
 
     special-abilities:
-    - Proficiencies: Cooking, Mixology, Disguise Kit, Poisoner's Kit, Stealth, Insight, Survival, Thieve's Tools, Sleight of Hand    
+    - Proficiencies: 
+      - Cooking
+      - Mixology
+      - Disguise Kit
+      - Poisoner's Kit
+      - Stealth, Insight, Survival, Thieve's Tools, Sleight of Hand
     attacks: |
       2 Attacks with Assassin's Dagger
     combat-tactics: |
