--- a/npcs/Beach.yaml
+++ b/npcs/Beach.yaml
@@ -335,7 +335,7 @@ npc:
     #
     factions:
     - id: butler_to_the_police_chief_dabbling_member_of_white_gloves_black_arts_libertarian_alchemists
-      name: Butler to the police chief; dabbling member of White Gloves, Black Arts libertarian alchemists
+      name: Butler to the police chief;
       role: Butler
 
 
@@ -477,7 +477,7 @@ npc:
       - Expertise: 
         - Description: Double proficiency bonus with Thieve's Tools and Sleight of Hand
         Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
+        Cunning Action: Can take a bonus action on each turn to Hide, Disengage, or Dash
         Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
 
       Assassin Abilities:
@@ -486,14 +486,14 @@ npc:
     special-abilities:
     - Proficiencies: 
       - Cooking
-        Mixology
-        Disguise Kit
-        Poisoner's Kit
-        Stealth
-        Insight
-        Survival
-        Thieve's Tools
-        Sleight of Hand
+      - Mixology
+      - Disguise Kit
+      - Poisoner's Kit
+      - Stealth
+      - Insight
+      - Survival
+      - Thieve's Tools
+      - Sleight of Hand
     
     attacks: |
       2 Attacks with Assassin's Dagger
@@ -525,3 +525,4 @@ npc:
       deep blues eyes and saw a nimble, dedicated soul; much different from the ferocious hatred he'd seen in his battles against raid-parties. "No," Amin exclaimed, "this one is different. 
       And we needn't fall victim to the same virulent hatred that afflicts the Orcs." Amin brought Ukhtor with him for the journey. Staring into his sea-blue eyes he pronounced that the youngster be named 'Beach'. 
       Raised within the Constabulary's ranks, Beach learned skills more akin to his natural abilities and became an agile killer. He was also imbued with their sense of noblility and respect.
+  
