--- a/npcs/albrecht_mukht.yaml
+++ b/npcs/albrecht_mukht.yaml
@@ -465,30 +465,32 @@ npc:
   #
   specialties:
     skills:
-   - - Half-Orc Abilities:
+     - Half-Orc Abilities:
        - Darkvision: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray..           
-       - Menacing: gain proficiency in the Intimidation skill 
-       - Relentless Endurance: When reduced to 0 Hit Points but not killed outright, can drop to 1 hit point instead. Can’t use this feature again until you finish a Long Rest.
-       - Savage Attack: When he scores a critical hit with a melee weapon Attack, he can roll one of the weapon’s damage dice one additional time and add it to the extra damage of the critical hit.
+         Menacing: gain proficiency in the Intimidation skill 
+         Relentless Endurance: When reduced to 0 Hit Points but not killed outright, can drop to 1 hit point instead. Can’t use this feature again until you finish a Long Rest.
+         Savage Attack: When he scores a critical hit with a melee weapon Attack, he can roll one of the weapon’s damage dice one additional time and add it to the extra damage of the critical hit.
 
-   - - Half-Dwarf Abilities:
+       Half-Dwarf Abilities:
        - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage           
-       - Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-       - Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+         Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+         Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
                        instead of his normal Proficiency Bonus       
     
-   - - Barbarian Abilities:
-       - Rage: Can enter a rage as a Bonus Action. 
-          - have advantage on Strength Checks and Strength Saving Throws.
-          - make a melee weapon Attack using Strength, you gain a +2 bonus to the damage roll
-          - Resistance to bludgeoning, piercing, and slashing damage          
-       - Danger Sense: has advantage on Dexterity Saving Throws against Effects that he can see, such as traps and Spells
-       - Reckless Attack: When making his first Attack on his Turn, he can decide to Attack recklessly. Doing so gives him advantage on melee weapon Attack Rolls using Strength during this turn, 
+       Barbarian Abilities:
+         Rage: 
+         - Description: Can enter a rage as a Bonus Action. 
+           Additional Information:
+           - have advantage on Strength Checks and Strength Saving Throws.
+           - make a melee weapon Attack using Strength, you gain a +2 bonus to the damage roll
+           - Resistance to bludgeoning, piercing, and slashing damage          
+         Danger Sense: has advantage on Dexterity Saving Throws against Effects that he can see, such as traps and Spells
+         Reckless Attack: When making his first Attack on his Turn, he can decide to Attack recklessly. Doing so gives him advantage on melee weapon Attack Rolls using Strength during this turn, 
                           but Attack Rolls against him have advantage until his next turn
-       - Extra Attack: Can attack twice each turn
+         Extra Attack: Can attack twice each turn
  
    - - Path of the Berserk Abilities:
-       - Fenzy: can go into a Frenzy when he rages. If he does so, for the Duration of his rage he can make a single melee weapon Attack as a Bonus Action on each of his turns after this one. When his rage ends, 
+       - Frenzy: can go into a Frenzy when he rages. If he does so, for the Duration of his rage he can make a single melee weapon Attack as a Bonus Action on each of his turns after this one. When his rage ends, 
                 he suffer one level of Exhaustion    
 
     special-abilities:
@@ -499,8 +501,8 @@ npc:
     combat-tactics: |
       Albrecht has worked to control his anger and will likely only rage if vehemently provoked. After this point, however, better duck and run
     special-equipment:
-          - Mason's Tools
-          - Woodcrafter's Tools
+    - Mason's Tools
+    - Woodcrafter's Tools
                                                                    
   profile:
 
@@ -522,46 +524,3 @@ npc:
       rage would not only be dangerous for others, but most certainly for himself.
 
       
-    #
-    # Personality (or something like that):
-    # Expand on the introduction, appearance, expressions, mannerisms, etc.
-    # without any length limits.
-    #
-    # Required.
-    # No length limit for now.
-    #
-    personality: |
-      Stout and muscular - barrel shaped; 5'5"; Tanned reddish brown skin; Deep brown dreadlocks with blonde highlights; various scars on his body and one across his right eye. While in the process of performing some roofing 
-      or general repairs he may shout out to ask a party to pitch-in for some gold in return. May also approach sinister looking adventurers with an offer to 'free the land' from the vile clutches of humans or some other race 
-      and ask him/her to 'off' a few members of said race. Easily distracted; Will forego tasks to complete a puzzle; carries small wooden sliding puzzles he built wherever he goes and uses them to answer to problems he's 
-      facing; always pointing out the differences between the races yet can't tell the difference between members of the same race. A paradoxically deeply racist multi-racial individual, Albrecht experiences his greatest joy 
-      when human or elven populations are diminished in numbers. He is also highly driven to have a hand in as many building projects in his current town or city so he can brag about his renown.
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
